test: transaction user sender transfer to user receiver